--- a/styles.css
+++ b/styles.css
@@ -114,3 +114,16 @@
     content: "🛒";
     margin-right: 10px;
 }
+ .trending{
+align-content: center;
+border-radius: 20px;
+width: 1000px;
+height: 200px;
+background-color: #f8f8f8;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+margin-top: 30px;
+
+}
+.trending h1 {
+    margin-top: 0;
+}
