--- a/styles.css
+++ b/styles.css
@@ -115,15 +115,49 @@
     margin-right: 10px;
 }
  .trending{
-align-content: center;
 border-radius: 20px;
-width: 1000px;
+width: 1250px;
 height: 200px;
-background-color: #f8f8f8;
+background: linear-gradient(to bottom, #55eb7d, #1b910d);
 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 margin-top: 30px;
+}
+.container{
+display: flex;
+justify-content: center;
 
 }
+
 .trending h1 {
-    margin-top: 0;
+    font-size: 45px;
+    color: #f5f1f1;
+    font-weight: bold;
+    margin: 0%;
+    align-items: center;
+    margin-top: 10px;
+    margin-left: 20px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.trending p {
+    font-size: 25px;
+    margin-left: 20px;
+    color: #f5f1f1;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.trending button {
+    padding: 12px 24px;
+    font-size: 10px;
+    margin-left: 33px;
+    margin-bottom: 20px;
+    background-color: #fbfdfe;
+    border: none;
+    border-radius: 5px;
+    color: #000;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+
+.trending button:hover {
+    background-color: #e6b800;
 }
